--- a/src/styles/postCSS/objects.icons.css
+++ b/src/styles/postCSS/objects.icons.css
@@ -22,7 +22,6 @@ a[href*="catholicnewsherald.com"]:not([class]):before {
 .show-icons a {
 	display: inline-flex;
 	align-items: center;
-	vertical-align: middle;
 }
 
 .gv-container a[href*="/departments/"]:before,
@@ -65,7 +64,6 @@ a[href*="catholicnewsherald.com"]:not([class]):before {
 a[href*="catholicnewsherald.com"] {
 	display: inline-flex;
 	align-items: center;
-	vertical-align: middle;
 }
 
 .facetwp-checkbox {
